--- a/Pagorn-Resume-iOS/Base.lproj/Main.storyboard
+++ b/Pagorn-Resume-iOS/Base.lproj/Main.storyboard
@@ -11,22 +11,6 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Work Exp-->
-        <scene sceneID="aXM-WH-VQ4">
-            <objects>
-                <viewController id="VH1-n5-lYF" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="lEF-Dd-O4N">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="0.50965378120000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="VRx-kC-NP3"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Work Exp" image="ic_work_36pt" id="pv2-TW-b9d"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="E6S-nB-QzI" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="449" y="205"/>
-        </scene>
         <!--Skill-->
         <scene sceneID="bgk-73-4Qt">
             <objects>
@@ -34,14 +18,14 @@
                     <view key="view" contentMode="scaleToFill" id="5QK-FV-G8e">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.95729869599999995" green="0.95252412559999999" blue="0.93316727880000006" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="hMX-Kr-V1V"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Skill" image="ic_code_36pt" id="1dR-Eh-fXw"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gDa-Bf-cw1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-274" y="888"/>
+            <point key="canvasLocation" x="-407" y="622"/>
         </scene>
         <!--Home-->
         <scene sceneID="3qQ-Ke-T6d">
@@ -209,14 +193,118 @@
                     </tabBar>
                     <connections>
                         <segue destination="pM3-fd-nuh" kind="relationship" relationship="viewControllers" id="a7S-r2-3mI"/>
-                        <segue destination="VH1-n5-lYF" kind="relationship" relationship="viewControllers" id="qzY-5n-Tey"/>
                         <segue destination="pIc-Jr-Eab" kind="relationship" relationship="viewControllers" id="By8-14-4M2"/>
                         <segue destination="SZz-RJ-J3s" kind="relationship" relationship="viewControllers" id="9IQ-yd-iKv"/>
+                        <segue destination="H8C-dU-uZT" kind="relationship" relationship="viewControllers" id="3Ue-PP-4Yp"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wxy-Cj-qOE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-407" y="-237"/>
+        </scene>
+        <!--Work Exp.-->
+        <scene sceneID="NuN-7q-4dE">
+            <objects>
+                <tableViewController id="H8C-dU-uZT" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="Z8o-dU-SK9">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.73725490199999999" green="0.72156862749999995" blue="0.69411764710000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ActivityCellIdentifier" rowHeight="200" id="JFp-f1-YgO" customClass="ActivityListTableViewCell" customModule="Pagorn_Resume_iOS" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="200"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="JFp-f1-YgO" id="Xu4-Kd-Bvp">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="199.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vj9-aw-CY5">
+                                            <rect key="frame" x="16" y="16" width="343" height="167.5"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="11/09/2010 - 22/11/2015" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N9E-rf-Yif">
+                                                    <rect key="frame" x="26" y="16" width="301" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="GXG-cj-F9I"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.27450980392156865" green="0.24705882352941178" blue="0.22745098039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Personnel Division of Recruit Training Center" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wRW-cn-Xal">
+                                                    <rect key="frame" x="26" y="45" width="301" height="57.5"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="57.5" id="S1M-Nq-wCn"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                                    <color key="textColor" red="0.14117647058823529" green="0.13333333333333333" blue="0.12549019607843137" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Android Developer" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9AQ-iE-bzd">
+                                                    <rect key="frame" x="26" y="135" width="301" height="24"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="24" id="ppF-W5-mVN"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Uxa-GD-rCo">
+                                                    <rect key="frame" x="0.0" y="0.0" width="10" height="167.5"/>
+                                                    <color key="backgroundColor" red="1" green="0.35757412529999999" blue="0.78291471489999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="10" id="Ecb-N0-apU"/>
+                                                    </constraints>
+                                                </view>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(Cooperative Education)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LzJ-Eo-K1b">
+                                                    <rect key="frame" x="26" y="106" width="301" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="Vwj-1o-PnO"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.38039215686274508" green="0.38039215686274508" blue="0.37254901960784315" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" red="0.95686274510000002" green="0.95294117649999999" blue="0.93333333330000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <constraints>
+                                                <constraint firstItem="N9E-rf-Yif" firstAttribute="leading" secondItem="Uxa-GD-rCo" secondAttribute="trailing" constant="16" id="0dg-mn-UQA"/>
+                                                <constraint firstItem="wRW-cn-Xal" firstAttribute="top" secondItem="N9E-rf-Yif" secondAttribute="bottom" constant="8" id="4XH-wg-KMb"/>
+                                                <constraint firstItem="Uxa-GD-rCo" firstAttribute="top" secondItem="vj9-aw-CY5" secondAttribute="top" id="5Wc-RB-9lu"/>
+                                                <constraint firstAttribute="trailing" secondItem="wRW-cn-Xal" secondAttribute="trailing" constant="16" id="IA8-0Z-Uit"/>
+                                                <constraint firstItem="9AQ-iE-bzd" firstAttribute="top" secondItem="LzJ-Eo-K1b" secondAttribute="bottom" constant="8" id="KpE-Ga-inD"/>
+                                                <constraint firstAttribute="trailing" secondItem="LzJ-Eo-K1b" secondAttribute="trailing" constant="16" id="ODE-Vb-C8C"/>
+                                                <constraint firstItem="Uxa-GD-rCo" firstAttribute="leading" secondItem="vj9-aw-CY5" secondAttribute="leading" id="Q6H-M6-NaU"/>
+                                                <constraint firstItem="wRW-cn-Xal" firstAttribute="leading" secondItem="Uxa-GD-rCo" secondAttribute="trailing" constant="16" id="Rof-tr-I8k"/>
+                                                <constraint firstItem="N9E-rf-Yif" firstAttribute="top" secondItem="vj9-aw-CY5" secondAttribute="top" constant="16" id="SHz-nb-Z4j"/>
+                                                <constraint firstAttribute="trailing" secondItem="N9E-rf-Yif" secondAttribute="trailing" constant="16" id="Zu7-1y-rpd"/>
+                                                <constraint firstAttribute="trailing" secondItem="9AQ-iE-bzd" secondAttribute="trailing" constant="16" id="btt-WX-mBf"/>
+                                                <constraint firstItem="LzJ-Eo-K1b" firstAttribute="leading" secondItem="Uxa-GD-rCo" secondAttribute="trailing" constant="16" id="mBB-3R-9EM"/>
+                                                <constraint firstAttribute="bottom" secondItem="Uxa-GD-rCo" secondAttribute="bottom" id="rlC-JZ-osq"/>
+                                                <constraint firstItem="9AQ-iE-bzd" firstAttribute="leading" secondItem="Uxa-GD-rCo" secondAttribute="trailing" constant="16" id="rvz-8s-wYJ"/>
+                                                <constraint firstItem="LzJ-Eo-K1b" firstAttribute="top" secondItem="wRW-cn-Xal" secondAttribute="bottom" constant="4" id="uUg-di-wQ3"/>
+                                            </constraints>
+                                        </view>
+                                    </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                    <constraints>
+                                        <constraint firstAttribute="trailing" secondItem="vj9-aw-CY5" secondAttribute="trailing" constant="16" id="8lQ-fd-mCU"/>
+                                        <constraint firstItem="vj9-aw-CY5" firstAttribute="top" secondItem="Xu4-Kd-Bvp" secondAttribute="top" constant="16" id="YzY-wg-ZaU"/>
+                                        <constraint firstItem="vj9-aw-CY5" firstAttribute="leading" secondItem="Xu4-Kd-Bvp" secondAttribute="leading" constant="16" id="bby-wx-VQx"/>
+                                        <constraint firstAttribute="bottom" secondItem="vj9-aw-CY5" secondAttribute="bottom" constant="16" id="zth-wl-PDa"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="H8C-dU-uZT" id="UuD-Gr-EU9"/>
+                            <outlet property="delegate" destination="H8C-dU-uZT" id="UaY-tT-9oh"/>
+                        </connections>
+                    </tableView>
+                    <tabBarItem key="tabBarItem" title="Work Exp." image="ic_work_36pt" id="hP0-dp-ehD"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fxC-PN-ipd" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="448.80000000000001" y="187.55622188905548"/>
         </scene>
     </scenes>
     <resources>
